@@ -1,8 +1,8 @@
-#define FILEVER_INCVERSION        0,15,2,57
-#define PRODUCTVER_INCVERSION     0,15,2,57
-#define STRFILEVER_INCVERSION     "0, 15, 2, 57\0"
-#define STRPRODUCTVER_INCVERSION  "0, 15, 2, 57\0"
+#define FILEVER_INCVERSION        0,15,2,58
+#define PRODUCTVER_INCVERSION     0,15,2,58
+#define STRFILEVER_INCVERSION     "0, 15, 2, 58\0"
+#define STRPRODUCTVER_INCVERSION  "0, 15, 2, 58\0"
 #define TSVN_VERMAJOR             0
 #define TSVN_VERMINOR             15
 #define TSVN_VERMICRO             2
-#define TSVN_VERBUILD_INCVERSION  57
+#define TSVN_VERBUILD_INCVERSION  58
